--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 
     \vspace{1in}
     
-    {\Large Word Count: 2481\par} % Replace XXXX with the actual word count
+    {\Large Word Count: 2481\par} 
 
 \end{titlepage}
 \tableofcontents
